Updated gitignore with windowsisms

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.o
+*.obj
 *.suo
 *.bin
 *.aps
@@ -25,5 +26,5 @@ projects/vc2012/ipch
 test/
 resources/old/
 .DS_Store
-Debug/
-Release/
+Debug*/
+Release*/
